data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_756.wast
;; 7. Develop a loop that has a `br_if` condition based on a boolean operation involving a combination of local variables. For example, use a condition like `if (x && y)`. This will test if logical operations in conditions are correctly evaluated.

(assert_invalid
  (module 
    (func $complex-conditional-loop 
      (local $x i32) 
      (local $y i32) 
      (block 
        (loop 
          (br_if 0 (i32.and (local.get $x) (local.get $y)))
        )
      )
    )
  )
  "type mismatch"
)